# lethal-company-mods-copier

./: .prettierrc  CHANGELOG.md  README-zh.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
.github/workflows/: release.yml  test.yml
scripts/: release.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: Button.vue  FolderSelect.vue  useModal.tsx
src/locales/: en.json  index.ts  zh.json
src/utils/: index.ts  io.ts  path.ts
src/views/: run.vue
types/: auto-imports.d.ts  components.d.ts  globals.d.ts
