[package]
name = "lethal-company-mods-copier"
version = "1.0.5"
description = "A Tauri App"
authors = ["s3xysteak"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "~2.0.0", features = [] }

[dependencies]
tauri = { version = "~2.0.0", features = [] }
tauri-plugin-shell = "~2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "~2.0.0"
tauri-plugin-fs = "~2.0.0"
